k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-api-service
  labels:
    app: ml-api
spec:
  selector:
    app: ml-api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
